--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
-@import './common';
-@import './example';
+@import './utils/glob';
+@import './base/glob';
+@import './components/glob';
+@import './layout/glob';
