--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="heder-hero">
   <div class="container">
     <div class="header">
       <a class="link" href="./index.html">
@@ -6,8 +6,8 @@
           <source
             media="(min-width: 1280px)"
             srcset="
-              ./images/header/logo-desk.png    1x,
-              ./images/header/logo@2x-desk.png 2x
+              ./images/header/logo/logo-desk.png    1x,
+              ./images/header/logo/logo@2x-desk.png 2x
             "
             type="image/png"
           />
@@ -15,8 +15,8 @@
           <source
             media="(min-width: 768px)"
             srcset="
-              ./images/header/logo-tab.png    1x,
-              ./images/header/logo@2x-tab.png 2x
+              ./images/header/logo/logo-tab.png    1x,
+              ./images/header/logo/logo@2x-tab.png 2x
             "
             type="image/png"
           />
@@ -24,14 +24,14 @@
           <source
             media="(max-width: 767px)"
             srcset="
-              ./images/header/logo-desk.png    1x,
-              ./images/header/logo@2x-desk.png 2x
+              ./images/header/logo/logo-desk.png    1x,
+              ./images/header/logo/logo@2x-desk.png 2x
             "
             type="image/png"
           />
 
           <img
-            src="./images/header/logo-mob.png"
+            src="./images/header/logo/logo-mob.png"
             alt="logo"
             width="96"
             height="44"
@@ -93,8 +93,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/1.png    1x,
-                ./images/header/donut/1@2x.png 2x
+                ./images/header/donut/desk/png/1-desk.png    1x,
+                ./images/header/donut/desk/png/1@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -102,8 +102,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/1-tab.png    1x,
-                ./images/header/donut/1@2x-tab.png 2x
+                ./images/header/donut/tab/png/1-tab.png    1x,
+                ./images/header/donut/tab/png/1@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -111,14 +111,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/1-mob.png    1x,
-                ./images/header/donut/1@2x-mob.png 2x
+                ./images/header/donut/mob/png/1-mob.png    1x,
+                ./images/header/donut/mob/png/1@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/1-mob.png "
+              src="./images/header/donut/mob/png/1-mob.png "
               alt="logo"
               width="64"
               height="71"
@@ -130,8 +130,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/2.png    1x,
-                ./images/header/donut/2@2x.png 2x
+                ./images/header/donut/desk/png/2-desk.png    1x,
+                ./images/header/donut/desk/png/2@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -139,8 +139,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/2-tab.png    1x,
-                ./images/header/donut/2@2x-tab.png 2x
+                ./images/header/donut/tab/png/2-tab.png    1x,
+                ./images/header/donut/tab/png/2@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -148,14 +148,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/2-mob.png    1x,
-                ./images/header/donut/2@2x-mob.png 2x
+                ./images/header/donut/mob/png/2-mob.png    1x,
+                ./images/header/donut/mob/png/2@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/2-mob.png "
+              src="./images/header/donut/mob/png/2-mob.png "
               alt="logo"
               width="35"
               height="39"
@@ -167,8 +167,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/3.png    1x,
-                ./images/header/donut/3@2x.png 2x
+                ./images/header/donut/desk/png/3-desk.png    1x,
+                ./images/header/donut/desk/png/3@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -176,8 +176,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/3-tab.png    1x,
-                ./images/header/donut/3@2x-tab.png 2x
+                ./images/header/donut/tab/png/3-tab.png    1x,
+                ./images/header/donut/tab/png/3@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -185,14 +185,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/3-mob.png    1x,
-                ./images/header/donut/3@2x-mob.png 2x
+                ./images/header/donut/mob/png/3-mob.png    1x,
+                ./images/header/donut/mob/png/3@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/3-mob.png "
+              src="./images/header/donut/mob/png/3-mob.png "
               alt="logo"
               width="68"
               height="75"
@@ -204,8 +204,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/4.png    1x,
-                ./images/header/donut/4@2x.png 2x
+                ./images/header/donut/desk/png/4-desk.png    1x,
+                ./images/header/donut/desk/png/4@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -213,8 +213,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/4-tab.png    1x,
-                ./images/header/donut/4@2x-tab.png 2x
+                ./images/header/donut/tab/png/4-tab.png    1x,
+                ./images/header/donut/tab/png/4@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -222,14 +222,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/4-mob.png    1x,
-                ./images/header/donut/4@2x-mob.png 2x
+                ./images/header/donut/mob/png/4-mob.png    1x,
+                ./images/header/donut/mob/png/4@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/4-mob.png "
+              src="./images/header/donut/mob/png/4-mob.png "
               alt="logo"
               width="44"
               height="49"
@@ -241,8 +241,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/5.png    1x,
-                ./images/header/donut/5@2x.png 2x
+                ./images/header/donut/desk/png/5-desk.png    1x,
+                ./images/header/donut/desk/png/5@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -250,8 +250,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/5-tab.png    1x,
-                ./images/header/donut/5@2x-tab.png 2x
+                ./images/header/donut/tab/png/5-tab.png    1x,
+                ./images/header/donut/tab/png/5@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -259,14 +259,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/5-mob.png    1x,
-                ./images/header/donut/5@2x-mob.png 2x
+                ./images/header/donut/mob/png/5-mob.png    1x,
+                ./images/header/donut/mob/png/5@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/5-mob.png "
+              src="./images/header/donut/mob/png/5-mob.png "
               alt="logo"
               width="35"
               height="38"
@@ -278,8 +278,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/6.png    1x,
-                ./images/header/donut/6@2x.png 2x
+                ./images/header/donut/desk/png/6-desk.png    1x,
+                ./images/header/donut/desk/png/6@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -287,8 +287,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/6-tab.png    1x,
-                ./images/header/donut/6@2x-tab.png 2x
+                ./images/header/donut/tab/png/6-tab.png    1x,
+                ./images/header/donut/tab/png/6@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -296,14 +296,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/6-mob.png    1x,
-                ./images/header/donut/6@2x-mob.png 2x
+                ./images/header/donut/mob/png/6-mob.png    1x,
+                ./images/header/donut/mob/png/6@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/6-mob.png "
+              src="./images/header/donut/mob/png/6-mob.png "
               alt="logo"
               width="29"
               height="33"
@@ -315,8 +315,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/7.png    1x,
-                ./images/header/donut/7@2x.png 2x
+                ./images/header/donut/desk/png/7-desk.png    1x,
+                ./images/header/donut/desk/png/7@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -324,8 +324,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/7-tab.png    1x,
-                ./images/header/donut/7@2x-tab.png 2x
+                ./images/header/donut/tab/png/7-tab.png    1x,
+                ./images/header/donut/tab/png/7@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -333,14 +333,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/7-mob.png    1x,
-                ./images/header/donut/7@2x-mob.png 2x
+                ./images/header/donut/mob/png/7-mob.png    1x,
+                ./images/header/donut/mob/png/7@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/7-mob.png "
+              src="./images/header/donut/mob/png/7-mob.png "
               alt="logo"
               width="59"
               height="66"
@@ -352,8 +352,8 @@
             <source
               media="(min-width: 1280px)"
               srcset="
-                ./images/header/donut/8.png    1x,
-                ./images/header/donut/8@2x.png 2x
+                ./images/header/donut/desk/png/8-desk.png    1x,
+                ./images/header/donut/desk/png/8@2x-desk.png 2x
               "
               type="image/png"
             />
@@ -361,8 +361,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/header/donut/8-tab.png    1x,
-                ./images/header/donut/8@2x-tab.png 2x
+                ./images/header/donut/tab/png/8-tab.png    1x,
+                ./images/header/donut/tab/png/8@2x-tab.png 2x
               "
               type="image/png"
             />
@@ -370,14 +370,14 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/header/donut/8-mob.png    1x,
-                ./images/header/donut/8@2x-mob.png 2x
+                ./images/header/donut/mob/png/8-mob.png    1x,
+                ./images/header/donut/mob/png/8@2x-mob.png 2x
               "
               type="image/png"
             />
 
             <img
-              src="./images/header/donut/8-mob.png "
+              src="./images/header/donut/mob/png/8-mob.png "
               alt="logo"
               width="29"
               height="32"
