Додає базову розмітку секцій контакти та футера

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,4 +1,31 @@
 <section class="contact">
     <div class="container">
+        <h2 class="contact__title">
+            Contact
+        </h2>
+        <p class="contact__description">
+            We will answer any question
+        </p>
+        <form class="contact__form">
+            <label class="contact__label">
+                <input
+                type="email"
+                class="contact__input"
+                placeholder="Email">
+            </label>
+            <label class="contact__label">
+                <input
+                type="text"
+                class="contact__input"
+                placeholder="Type your questions">
+            </label>
+            <button
+            type="submit"
+            class="contact__button">
+                <span class="contact__register">
+                    Send
+                </span>
+            </button>
+        </form>
     </div>
 </section>
