--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,27 @@
-<footer class="page-footer">
+<footer class="footer">
     <div class="container">
-        
+        <ul class="footer__socials-list">
+            <li class="footer__social-item list">
+                <a href="" class="footer__social-link link">
+
+                </a>
+            </li>
+            <li class="footer__social-item list">
+                <a href="" class="footer__social-link link">
+
+                </a>
+            </li>
+            <li class="footer__social-item list">
+                <a href="" class="footer__social-link link">
+
+                </a>
+            </li>
+        </ul>
+        <a href="tel:9102228855" class="footer__telephone link">
+            (910)222-8855
+        </a>
+        <p class="footer__location">
+            New York
+        </p>
     </div>
 </footer>
