--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="heder-hero">
+<header class="header-hero">
   <div class="container">
     <div class="header">
       <a class="link" href="./index.html">
@@ -38,20 +38,30 @@
           />
         </picture>
       </a>
-      <ul class="list">
-        <li>
-          <a class="link" href="">About us</a>
-        </li>
-        <li>
-          <a class="link" href="">Program</a>
-        </li>
-        <li>
-          <a class="link" href="">Reviews</a>
-        </li>
-        <li>
-          <a class="link" href="">Contacts</a>
-        </li>
-      </ul>
+
+      <button class="btn burger-btn">
+        <svg class="">
+          <use href="#"></use>
+          <use href="#"></use>
+        </svg>
+      </button>
+
+      <nav class="navigation">
+        <ul class="list">
+          <li>
+            <a class="link" href="">About us</a>
+          </li>
+          <li>
+            <a class="link" href="">Program</a>
+          </li>
+          <li>
+            <a class="link" href="">Reviews</a>
+          </li>
+          <li>
+            <a class="link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <div class="hero">
