Додано шрифти та початкову стилізацію
Додано стилізацію секції  "контакти" та футера під мобільні пристрої (не завершено)

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -4,7 +4,7 @@
             Contact
         </h2>
         <p class="contact__description">
-            We will answer any question
+            We will answer any question!
         </p>
         <form class="contact__form">
             <label class="contact__label">
@@ -21,8 +21,8 @@
             </label>
             <button
             type="submit"
-            class="contact__button">
-                <span class="contact__register">
+            class="contact__button btn">
+                <span class="contact__send">
                     Send
                 </span>
             </button>
