--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,50 @@
 <footer class="footer">
     <div class="container">
-        <ul class="footer__socials-list">
-            <li class="footer__social-item list">
+        <ul class="footer__socials-list list">
+            <li class="footer__social-item">
                 <a href="" class="footer__social-link link">
-
+                    <svg class="footer__social__icon" width="16" height="16">
+                        <use href="./images/footer/footer-sprite.svg#icon-twitter">
+                        </use>
+                    </svg>
                 </a>
             </li>
-            <li class="footer__social-item list">
+            <li class="footer__social-item">
                 <a href="" class="footer__social-link link">
-
+                    <svg class="footer__social__icon" width="16" height="16">
+                        <use href="./images/footer/footer-sprite.svg#icon-instagram">
+                        </use>
+                    </svg>
                 </a>
             </li>
-            <li class="footer__social-item list">
+            <li class="footer__social-item">
                 <a href="" class="footer__social-link link">
-
+                    <svg class="footer__social__icon" width="16" height="16">
+                        <use href="./images/footer/footer-sprite.svg#icon-facebook">
+                        </use>
+                    </svg>
                 </a>
             </li>
         </ul>
-        <a href="tel:9102228855" class="footer__telephone link">
-            (910)222-8855
-        </a>
-        <p class="footer__location">
-            New York
-        </p>
+        <div class="footer__bottom">
+            <a href="tel:9102228855" class="footer__telephone link">
+                <svg class="footer__icon" width="16" height="16">
+                    <use href="./images/footer/footer-sprite.svg#icon-telephone">
+                    </use>
+                </svg>
+                <span class="footer__number">
+                    (910)222-8855
+                </span>    
+            </a>
+            <p class="footer__location">
+                <svg class="footer__icon" width="16" height="16">
+                    <use href="./images/footer/footer-sprite.svg#icon-location">
+                    </use>
+                </svg>
+                <span class="footer__address">
+                    New York
+                </span>
+            </p>
+        </div>
     </div>
 </footer>
