--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,5 +1,6 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
 body {
+  font-family: 'Montserrat', sans-serif;
   min-width: 320px;
 }
