--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,7 +40,7 @@
       </a>
 
       <button class="btn burger-btn">
-        <svg class="">
+        <svg class="burger-btn__icon">
           <use href="#"></use>
           <use href="#"></use>
         </svg>
