--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,8 +39,8 @@
         </picture>
       </a>
 
-      <button class="btn burger-btn">
-        <svg class="">
+      <button type="button" class="btn burger-btn">
+        <svg width="30" height="30">
           <use href="#"></use>
           <use href="#"></use>
         </svg>
