--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -11,6 +11,15 @@
     font-family: 'Caveat brush', cursive;
     font-size: 24px;
     line-height: 1.25;
+
+    @media screen and(min-width: 768px) {
+        margin-bottom: 20px;
+    }
+
+    @media screen and(min-width: 1280px) {
+        font-size: 36px;
+        line-height: 1.25;
+    }
 }
 
 .contact__description {
@@ -19,6 +28,11 @@
     color: #2E2520;
     font-size: 16px;
     line-height: 1.25;
+
+    @media screen and(min-width: 1280px) {
+        font-size: 18px;
+        line-height: 1.22;
+    }
 }
 
 .contact__label {
@@ -27,6 +41,14 @@
 
 .contact__label + .contact__label {
     margin-top: 20px;
+
+    @media screen and(min-width: 768px) {
+        margin-bottom: 16px;
+    }
+
+    @media screen and(min-width: 1280px) {
+        margin-bottom: 15px;
+    }
 }
 
 .contact__input {
@@ -39,6 +61,22 @@
     border-right: 0px solid transparent;
     border-bottom: 1px solid #AB816C;
     border-left: 0px solid transparent;
+
+    &:hover, &:focus {
+        border-bottom: 1px solid #2E2520;
+    }
+
+    @media screen and (min-width: 321px) {
+        max-width: 280px;
+    }
+
+    @media screen and (min-width: 768px) {
+        max-width: 336px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        max-width: 394px;
+    }
 }
 
 .contact__input::placeholder {
@@ -57,7 +95,6 @@
     padding: 8px 57px;
     
     border-radius: 25px;
-    cursor: pointer;
 
     font-family: 'Caveat brush', cursive;
     font-size: 18px;
@@ -71,5 +108,12 @@
     &:focus {
         color: #000000;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+
+    @media screen and(min-width: 1280px) {
+        padding: 8px 67px;
+
+        font-size: 24px;
+        line-height: 1.25;
     }
 }
