--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,10 +39,13 @@
         </picture>
       </a>
 
-      <button type="button" class="btn burger-btn">
+      <button 
+      type="button" 
+      class="btn burger-btn"
+      aria-label="Mobile menu switch">
         <svg width="30" height="30">
-          <use href="#"></use>
-          <use href="#"></use>
+          <use class="icon-close" href="./images/sprite.svg#close"></use>
+          <use class="icon-burger" href="./images/sprite.svg#burger"></use>
         </svg>
       </button>
 
