--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -36,3 +36,27 @@ body {
   background-position: center;
   background-size: cover;
 }
+.header{
+  text-align: center;
+}
+.logo{
+  display: inline-block;
+  padding-top: 25px;
+  padding-bottom: 40px;
+  
+}
+.navigation{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  background-color: rgba(254, 243, 228, 0.9);
+}
+.navigation__item:not(:last-child){
+  margin-bottom: 45px;
+}
