--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,5 +1,12 @@
 .burger-btn{
+    display: inline-block;
+    position: absolute;
+    top: 16px;
+    right: 0px;
+    padding: 0;
     background-color: #FEF3E4;
+
+    z-index: 10;
 }
 .burger-btn .icon-close{
     display: none;
