--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,13 +69,13 @@
 
       <p class="hero__subtitle">Hosted by Eva Green</p>
 
-      <button class="btn" type="button"></button>
+      <button class="btn hero__btn-reg" type="button">Register</button>
 
       <ul class="list">
         <li>
           <a class="link" href="">
             <svg width="16" height="16">
-              <use href="#"></use>
+              <use href="./images/sprite.svg#tvitter-icon"></use>
             </svg>
           </a>
         </li>
@@ -83,7 +83,7 @@
         <li>
           <a class="link" href="">
             <svg width="16" height="16">
-              <use href="#"></use>
+              <use href="./images/sprite.svg#inst-icon"></use>
             </svg>
           </a>
         </li>
@@ -91,7 +91,7 @@
         <li>
           <a class="link" href="">
             <svg width="16" height="16">
-              <use href="#"></use>
+              <use href="./images/sprite.svg#fb-icon"></use>
             </svg>
           </a>
         </li>
