--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -6,7 +6,7 @@ body {
   font-family: $main-font;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
 
   color: $font-color-dark;
 
