--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -11,7 +11,7 @@
                 <input
                 type="email"
                 class="contact__input"
-                placeholder="Email">
+                placeholder="Email" />
             </label>
             <label class="contact__label">
                 <input
