--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -29,7 +29,7 @@
 
     <li class="reviews-item">
       <img
-        src="./images/reviews/pic.jpg"
+        src="./images/reviews/pic1.jpg"
         alt="фото человека"
         class="reviews-img"
       />
@@ -55,7 +55,7 @@
 
     <li class="reviews-item">
       <img
-        src="./images/reviews/pic.jpg"
+        src="./images/reviews/pic2.jpg"
         alt="фото человека"
         class="reviews-img"
       />
