--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,7 +49,7 @@
             <use class="icon-burger" href="./images/sprite.svg#burger"></use>
           </svg>
       </button>
-      <nav class="navigation">
+      <!-- <nav class="navigation">
         <a class="logo link" href="./index.html">
           <picture>
             <source
@@ -67,7 +67,7 @@
               height="85"
             />
           </picture>
-          
+
         </a>
         <ul class="navigation__list list">
           <li class="navigation__item">
@@ -83,7 +83,7 @@
             <a class="link" href="">Contacts</a>
           </li>
         </ul>
-      </nav>
+      </nav> -->
     </div>
 
     <div class="hero">
