Фіналізує секцію контакти та футер

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -11,13 +11,14 @@
                 <input
                 type="email"
                 class="contact__input"
-                placeholder="Email" />
+                placeholder="Email"
+                pattern= "^([^ ]+@[^ ]+\.[a-z]{2,6}|)$" />
             </label>
             <label class="contact__label">
                 <input
                 type="text"
                 class="contact__input"
-                placeholder="Type your questions">
+                placeholder="Type your questions" />
             </label>
             <button
             type="submit"
