--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,30 +53,42 @@
         </div>
     </div>
     <picture>
-        <source
+          <!-- Набір зображень для десктопних екранів -->
+          <source
+            media="(min-width: 1280px)"
             srcset="
-            ./images/footer/mob/webp/wheat-flour-84.webp 84w,
-            ./images/footer/mob/webp/wheat-flour-168.webp 168w,
-            ./images/footer/tab/webp/wheat-flour-184.webp 184w,
-            ./images/footer/desk/webp/wheat-flour-302.webp 302w,
-            ./images/footer/tab/webp/wheat-flour-368.webp 368w,
-            ./images/footer/desk/webp/wheat-flour-604.webp 604w"
-            
-            type="image/webp" />
-        <img
-            class="footer__pic"
+              ./images/footer/desk/webp/wheat-flour-302.webp 1x,
+              ./images/footer/desk/webp/wheat-flour-604.webp 2x
+            "
+            type="image/webp"
+          />
+          
+          <!-- Набір зображень для планшетних екранів -->
+          <source
+            media="(min-width: 768px)"
             srcset="
-            ./images/footer/mob/png/wheat-flour-84.png 84w,
-            ./images/footer/mob/png/wheat-flour-168.png 168w,
-            ./images/footer/tab/png/wheat-flour-184.png 184w,
-            ./images/footer/desk/png/wheat-flour-302.png 302w,
-            ./images/footer/tab/png/wheat-flour-368.png 368w,
-            ./images/footer/desk/png/wheat-flour-604.png 604w"
+              ./images/footer/tab/webp/wheat-flour-184.webp 1x,
+              ./images/footer/tab/webp/wheat-flour-368.webp 2x
+            "
+            type="image/webp"
+          />
 
+          <!-- Набір зображень для мобільних екранів -->
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/footer/mob/webp/wheat-flour-84.webp 1x,
+              ./images/footer/mob/webp/wheat-flour-168.webp 2x
+            "
+            type="image/webp"
+          />
+
+          <img
+            class="footer__pic"
             src="./images/footer/mob/png/wheat-flour-84.png"
             alt="flour in a bowl"
-            sizes="(min-width: 1200px) 604px, (min-width: 768px) 184px, (max-width: 480px) 84px, 100vw"
             width="84"
-            height="73">
+            height="73"
+          />
     </picture>
 </footer>
