--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -56,6 +56,7 @@
     margin-right: auto;
     margin-left: auto;
     width: 100%;
+    max-width: 280px;
 
     border-top: 0px solid transparent;
     border-right: 0px solid transparent;
@@ -64,12 +65,10 @@
 
     outline: none;
 
+    @include animation(border-bottom);
+
     &:hover, &:focus {
         border-bottom: 1px solid #2E2520;
-    }
-
-    @media screen and (min-width: 321px) {
-        max-width: 280px;
     }
 
     @media screen and (min-width: 768px) {
@@ -112,6 +111,9 @@
     background-color: #AB816C;
     color: #ffffff;
     filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.25));
+
+    @include animation(color);
+    @include animation(filter);
 
     &:hover,
     &:focus {
