--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -42,3 +42,9 @@
     }
   }
 }
+
+@mixin animation($type) {
+  transition-property: $type;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
