начало работы над пончиками

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -71,25 +71,25 @@
 
       <button class="btn hero__btn-reg" type="button">Register</button>
 
-      <ul class="list">
-        <li>
-          <a class="link" href="">
+      <ul class="list socials hero__socials">
+        <li class="socials__item">
+          <a class="link socials-link" href="">
             <svg width="16" height="16">
               <use href="./images/sprite.svg#tvitter-icon"></use>
             </svg>
           </a>
         </li>
 
-        <li>
-          <a class="link" href="">
+        <li class="socials__item">
+          <a class="link socials-link" href="">
             <svg width="16" height="16">
               <use href="./images/sprite.svg#inst-icon"></use>
             </svg>
           </a>
         </li>
 
-        <li>
-          <a class="link" href="">
+        <li class="socials__item">
+          <a class="link socials__link" href="">
             <svg width="16" height="16">
               <use href="./images/sprite.svg#fb-icon"></use>
             </svg>
@@ -97,8 +97,8 @@
         </li>
       </ul>
 
-      <ul class="list">
-        <li>
+      <ul class="list donut-group">
+        <li class="donut-group__item donut-1">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -128,6 +128,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/1-mob.png "
               alt="logo"
               width="64"
@@ -135,7 +136,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-2">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -165,6 +166,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/2-mob.png "
               alt="logo"
               width="35"
@@ -172,7 +174,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-3">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -202,6 +204,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/3-mob.png "
               alt="logo"
               width="68"
@@ -209,7 +212,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-4">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -239,6 +242,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/4-mob.png "
               alt="logo"
               width="44"
@@ -246,7 +250,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-5">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -276,6 +280,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/5-mob.png "
               alt="logo"
               width="35"
@@ -283,7 +288,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-6">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -313,6 +318,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/6-mob.png "
               alt="logo"
               width="29"
@@ -320,7 +326,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-7">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -350,6 +356,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/7-mob.png "
               alt="logo"
               width="59"
@@ -357,7 +364,7 @@
             />
           </picture>
         </li>
-        <li>
+        <li class="donut-group__item donut-8">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -387,6 +394,7 @@
             />
 
             <img
+              class="donut-group__img"
               src="./images/header/donut/mob/png/8-mob.png "
               alt="logo"
               width="29"
