--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 body {
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100% 1036px;
+  background-size: 100% 461px;
 
   background-image: url(../images/header/bg/png/bg-mob.png);
 
@@ -15,6 +15,8 @@ body {
   @include mq(tablet) {
     background-image: url(../images/header/bg/png/bg-tab.png);
 
+    background-size: 100% 622px;
+
     // background-image: -webkit-image-set(
     //   url(../images/header/bg/webp/bg-tab.webp)
     // );
@@ -24,6 +26,8 @@ body {
 
   @include mq(desktop) {
     background-image: url(../images/header/bg/png/bg-desk.png);
+
+    background-size: 100% 1036px;
 
     // background-image: -webkit-image-set(
     //   url(../images/header/bg/webp/bg-desk.webp)
