--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,90 +1,90 @@
 <section class="reviews">
-  <h1 class="reviews-title">Rewiews</h1>
-  <ul class="reviews-list">
-    <li class="reviews-item">
+  <h1 class="reviews__title">Rewiews</h1>
+  <ul class="reviews__list">
+    <li class="reviews__item reviews__item--john">
       <img
         src="./images/reviews/pic.jpg"
-        alt="фото человека"
-        class="reviews-img"
+        alt="John photo"
+        class="reviews__img"
       />
-      <div class="reviews-star">
-        <svg class="reviews-icon">
+      <div class="reviews__star">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
       </div>
-      <p class="reviews-name">Ellis</p>
+      <p class="reviews__name">John</p>
     </li>
 
-    <li class="reviews-item">
+    <li class="reviews__item reviews__item--will">
       <img
         src="./images/reviews/pic.jpg"
         alt="фото человека"
-        class="reviews-img"
+        class="reviews__img"
       />
-      <div class="reviews-star">
-        <svg class="reviews-icon">
+      <div class="reviews__star">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
       </div>
-      <p class="reviews-name">Will</p>
+      <p class="reviews__name">Will</p>
     </li>
 
-    <li class="reviews-item">
+    <li class="reviews__item reviews__item--elisabeth">
       <img
         src="./images/reviews/pic.jpg"
         alt="фото человека"
-        class="reviews-img"
+        class="reviews__img"
       />
-      <div class="reviews-star">
-        <svg class="reviews-icon">
+      <div class="reviews__star">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-all"></use>
         </svg>
-        <svg class="reviews-icon">
+        <svg class="reviews__icon">
           <use href="./images/sprite.svg#star-border"></use>
         </svg>
       </div>
-      <p class="reviews-name">Billy</p>
+      <p class="reviews__name">Elisabeth</p>
     </li>
   </ul>
-  <p class="reviews-text">
+  <p class="reviews__text">
     Last time I have visited a cooking course by Eva I was impressed with the
     way she explained everything to people. You can be sure you will manage to
     cook a delicious dish even if it is your first time in the kitchen! Thank
     you so much for the masterclass! Looking forward to the next one and highly
     recommend it to everyone!
   </p>
-  <p class="reviews-counter">2/15</p>
+  <p class="reviews__counter">2/15</p>
 </section>
